crates/buff-lang-codegen-rust/tests/snapshots/system_codegen__args_codegen_list_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/system_codegen.rs
assertion_line: 702
expression: src
---
fn f() {
    std::env::args().collect::<Vec<String>>();
}
