crates/buff-lang-codegen-rust/tests/snapshots/system_codegen__env_codegen_get_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/system_codegen.rs
assertion_line: 714
expression: src
---
fn f() {
    std::env::var("HOME").ok();
}
