crates/buff-lang-codegen-rust/tests/snapshots/system_codegen__env_codegen_set_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/system_codegen.rs
assertion_line: 708
expression: src
---
fn f() {
    unsafe {
        std::env::set_var("KEY".to_string(), "v".to_string());
    };
}
