crates/buff-lang-codegen-rust/tests/snapshots/system_codegen__input_codegen_prompt_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/system_codegen.rs
assertion_line: 726
expression: src
---
fn f() {
    {
        print!("Name: ".to_string());
        use std::io::Write;
        std::io::stdout().flush().ok();
        let mut __buff_prelude_line = String::new();
        std::io::stdin().read_line(&mut __buff_prelude_line).ok();
        __buff_prelude_line.trim_end().to_string()
    };
}
