crates/buff-lang-codegen-rust/tests/snapshots/system_codegen__sleep_codegen_duration_millis_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/system_codegen.rs
assertion_line: 759
expression: src
---
fn f() {
    tokio::time::sleep(std::time::Duration::from_millis(500)).await;
}
