crates/buff-lang-codegen-rust/tests/snapshots/system_codegen__sleep_codegen_duration_seconds_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/system_codegen.rs
assertion_line: 747
expression: src
---
fn f() {
    tokio::time::sleep(std::time::Duration::from_secs(2)).await;
}
