crates/buff-lang-codegen-rust/tests/snapshots/system_codegen__system_codegen_full_program_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/system_codegen.rs
assertion_line: 778
expression: src
---
fn main() {
    let args: Vec<String> = std::env::args().collect::<Vec<String>>();
    let first: String = std::env::args().nth(1).unwrap_or_default();
    let home: Option<String> = std::env::var("HOME".to_string()).ok();
    unsafe {
        std::env::set_var("DEBUG".to_string(), "1".to_string());
    };
    let has_path: bool = std::env::var("PATH".to_string()).is_ok();
    let name: String = {
        print!("Name: ".to_string());
        use std::io::Write;
        std::io::stdout().flush().ok();
        let mut __buff_prelude_line = String::new();
        std::io::stdin().read_line(&mut __buff_prelude_line).ok();
        __buff_prelude_line.trim_end().to_string()
    };
    let line: String = {
        let mut __buff_prelude_line = String::new();
        std::io::stdin().read_line(&mut __buff_prelude_line).ok();
        __buff_prelude_line.trim_end().to_string()
    };
    tokio::time::sleep(std::time::Duration::from_secs(1)).await;
    {
        if let Ok(__buff_contents) = std::fs::read_to_string(".env") {
            for __buff_line in __buff_contents.lines() {
                let __buff_line = __buff_line.trim();
                if __buff_line.is_empty() || __buff_line.starts_with('#') {
                    continue;
                }
                if let Some((__buff_key, __buff_val)) = __buff_line.split_once('=') {
                    let __buff_k = __buff_key.trim().to_string();
                    let __buff_v = __buff_val.trim().to_string();
                    if !__buff_k.is_empty() && std::env::var(&__buff_k).is_err() {
                        unsafe {
                            std::env::set_var(&__buff_k, &__buff_v);
                        }
                    }
                }
            }
        }
    }
}
